scss/components/_icons.scss
.clickable-icon,
.mod-left-split .workspace-tab-header,
.mod-right-split .workspace-tab-header {
  margin: 0 2px;
  transition: var(--transition-hover-bg), var(--transition-hover-color);

  &:hover {
    --background-modifier-hover: rgb(var(--ctp-accent));

    color: var(--text-on-accent);
  }

  &:hover svg {
    color: var(--text-on-accent);
  }
}

.clickable-icon[aria-disabled="true"]:hover {
  background-color: rgb(var(--ctp-accent));
}

.clickable-icon.is-active,
.mod-left-split .workspace-tab-header.has-active-menu,
.mod-right-split .workspace-tab-header.has-active-menu,
.mod-left-split .workspace-tab-header.is-active,
.mod-right-split .workspace-tab-header.is-active {
  box-shadow:
    inset 0 0 4px rgb(var(--ctp-crust)),
    inset 0 0 6px rgb(var(--ctp-base));
  outline: 1px solid rgb(var(--ctp-surface1));
  transition: var(--transition-hover-bg), var(--transition-hover-color);

  svg {
    color: rgb(var(--ctp-accent));
    transition: background-color 3s ease-in-out;
  }

  &:hover,
  &:hover svg {
    background-color: rgb(var(--ctp-accent));
    box-shadow: none;
    color: var(--text-on-accent);
  }
}

.workspace .mod-root .workspace-tabs.mod-stacked .workspace-tab-container .workspace-tab-header-inner-close-button:hover,
.workspace-tab-header.is-active .workspace-tab-header-inner-close-button:hover,
.suggestion :hover.list-item-part.clickable-icon[aria-label="Clear search history"],
.modal-close-button:hover {
  background-color: rgb(var(--ctp-red));
  box-shadow: 0 0 2px 1px rgb(var(--ctp-surface1));
  color: rgb(var(--ctp-base));
  transition: var(--transition-hover-bg), var(--transition-hover-color);
}

.workspace-tab-header-inner-close-button:hover {
  background-color: rgb(var(--ctp-red), 50%);
}

.workspace-tab-header-inner:hover .workspace-tab-header-inner-icon {
  --icon-color-hover: var(--text-faint);
  --opacity-icon-hover: 1;
}

.search-input-clear-button:hover,
.search-input-clear-button:active {
  color: rgb(var(--ctp-red));
}

/*
* Windows and Linux min, max, and close buttons
*/

.mod-linux .titlebar-button,
.mod-windows .titlebar-button {
  transition: var(--transition-hover-bg), var(--transition-hover-color);
}

.mod-linux .titlebar-button:hover,
.mod-windows .titlebar-button:hover {
  background-color: rgb(var(--ctp-pink));
  color: var(--text-on-accent);
}

.mod-linux .titlebar-button.mod-close:hover,
.mod-windows .titlebar-button.mod-close:hover {
  background-color: rgb(var(--ctp-red));
  color: var(--text-on-accent);
}

/*
* Folder icons
*/

.nav-folder-collapse-indicator,
.nav-folder.mod-root > .nav-folder-title .nav-folder-title-content::before {
  display: none;
}

/*
* Closed folder
*/

.nav-folder.is-collapsed .nav-folder-title .nav-folder-title-content::before {
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M4 20h16a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.93a2 2 0 0 1-1.66-.9l-.82-1.2A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13c0 1.1.9 2 2 2Z'%3E%3C/path%3E%3Cpath d='M2 10h20'%3E%3C/path%3E%3C/svg%3E");
  transition: -webkit-mask-image 0.2s ease;
}

.nav-folder.is-collapsed .nav-folder-title .nav-folder-title-content::before,
.nav-folder .nav-folder-title .nav-folder-title-content::before {
  width: var(--icon-xs);
  height: var(--icon-xs);
  margin-right: 8px;
  background-color: currentcolor;
  background-repeat: no-repeat;
  vertical-align: -2px;

  &:hover {
    color: var(--text-on-accent);
  }
}

.tree-item-self.is-being-renamed:focus-within {
  color: currentcolor;
}

/*
* Open folder
*/

.nav-folder .nav-folder-title .nav-folder-title-content::before {
  display: inline-block;
  width: var(--icon-xs);
  height: var(--icon-xs);
  background-size: 16px 16px;
  content: "";
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m6 14 1.45-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.55 6a2 2 0 0 1-1.94 1.5H4a2 2 0 0 1-2-2V5c0-1.1.9-2 2-2h3.93a2 2 0 0 1 1.66.9l.82 1.2a2 2 0 0 0 1.66.9H18a2 2 0 0 1 2 2v2'%3E%3C/path%3E%3C/svg%3E");
  transition: -webkit-mask-image 0.2s ease;
}

/*
* Hide icons with Style Settings
*/

.ctp-icon-hide {
  .nav-folder .nav-folder-title .nav-folder-title-content::before,
  .nav-folder.is-collapsed .nav-folder-title .nav-folder-title-content::before,
  .nav-folder .nav-folder-title .nav-folder-title-content::before,
  .nav-folder.is-collapsed .nav-folder-title .nav-folder-title-content::before {
    display: none;
  }
}

/*
* Bring block edit button in line with rest of button hovers
*/

.markdown-source-view.mod-cm6 .pdf-embed .edit-block-button:hover {
  background-color: rgb(var(--ctp-pink));
  color: var(--text-on-accent);
}

